[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/enemy.png" type="Texture" id=1]
[ext_resource path="res://enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.5631, 26.7565 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.606, 7.75139 )

[node name="RigidBody2D" type="RigidBody2D"]
collision_layer = 5
collision_mask = 5
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )

[node name="enemy" type="Sprite" parent="."]
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.270554, 5.14048 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1.50777, -17.1654 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_RigidBody2D_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
